src/css/style.css
body {
  margin: 0;
  font-family: 'Trebuchet MS';

}

.backgroundImg {
  width: 100vw;
  height: 100vh;
  position: absolute;
  z-index: -1;
  background-image: url("../images/malmangar.jpg"); /* This needs to be compressed */
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
}

a:link{
  color: inherit;
  text-decoration: none;
}

a:visited {
  color: inherit;
  text-decoration: none;
}

a:hover {
  color: inherit;
  text-decoration: none;
}

a:active {
  color: inherit;
  text-decoration: none;
}

h1 {
  font-size: 3em;
}

.header {
  width: 100vw;
  height: auto;
  position: fixed;
  display: grid; 
  grid-template: 100% / calc(100vw*2/5) 1fr;
}

#header {
  background-color: white;
  box-shadow: 0px 0px 10px;
}

#headerTitle {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
}

#headerTitle > h2 {
  font-size: 2em;
  margin: 50px;
}

#headerLinks {
  width: 100%;
  height: 100%;
  color: white;
  margin: auto;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 1.25em;
}

#headerLinks > a {
  width: 50%;
  height: 100%;
  margin: auto;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  cursor: pointer;
}

/* Kinda insane implementation of dropdown menu */

.dropdown-content {
  display: none;
  position: absolute;
  background-color: #575F38;
  top: 100%;
  width: calc(100%/3.333); /* Why does this work */
  z-index: 1;
  height: auto;
  border-radius: 0px 0px 15px 15px;
}

.dropdown-content a {
  float: none;
  color: white;
  text-decoration: none;
  display: block;
  text-align: left;
  padding: 0px 25px;
  line-height: 3.5em;
}

#dropdwn1 {
  left: calc(100vw*2/5);
}

#dropdwn2 {
  right: 0;
}

#headerLinks > a:hover + .dropdown-content {
  display: block;
}

#headerLinks > a:hover + .dropdown-content a{
  display: block;
}

.dropdown-content:hover {
  display: block;
}

.dropdown-content:hover ~ #headerLinks > a {
  background-color: #575F38;
}

.dropdown-content > a:hover {
  background-color: #454c2c;
}

/* End of insane dropdown menu implementation */

/* Hamburger menu */

#menuToggle
{
  display: none;
  position: relative;
  top: 50px;
  left: 50px;
  z-index: 1;
  -webkit-user-select: none;
  user-select: none;
}

#menuToggle a
{
  text-decoration: none;
  color: white;
  transition: color 0.3s ease;
  line-height: 1.5em;
}

#menuToggle a:hover
{
  font-weight: bold;
}


#menuToggle input
{
  display: block;
  width: 40px;
  height: 32px;
  position: absolute;
  top: -7px;
  left: -5px;
  cursor: pointer;
  opacity: 0; /* hide this */
  z-index: 2; /* and place it over the hamburger */ 
  -webkit-touch-callout: none;
}

/*
 * Just a quick hamburger
 */
#menuToggle span
{
  display: block;
  width: 33px;
  height: 4px;
  margin-bottom: 5px;
  position: relative;
  background: black;
  border-radius: 3px;
  z-index: 1;
  transform-origin: 4px 0px;  
  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
              opacity 0.55s ease;
}

#menuToggle span:first-child
{
  transform-origin: 0% 0%;
}

#menuToggle span:nth-last-child(2)
{
  transform-origin: 0% 100%;
}

/* 
 * Transform all the slices of hamburger
 * into a crossmark.
 */
#menuToggle input:checked ~ span
{
  opacity: 1;
  transform: rotate(45deg) translate(-2px, -1px);
  background: white;
}

/*
 * But let's hide the middle one.
 */
#menuToggle input:checked ~ span:nth-last-child(3)
{
  opacity: 0;
  transform: rotate(0deg) scale(0.2, 0.2);
}

/*
 * Ohyeah and the last one should go the other direction
 */
#menuToggle input:checked ~ span:nth-last-child(2)
{
  transform: rotate(-45deg) translate(0, -1px);
}

/*
 * Make this absolute positioned
 * at the top left of the screen
 */
#menu
{
  position: absolute;
  width: 300px;
  margin: -100px 0 0 -50px;
  padding: 50px;
  padding-top: 125px;
  
  background: #575F38;
  list-style-type: none;
  -webkit-font-smoothing: antialiased;
  /* to stop flickering of text in safari */
  
  transform-origin: 0% 0%;
  transform: translate(-100%, 0);
  
  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
}

#menu li
{
  padding: 10px 0;
  font-size: 22px;
}

/*
 * And let's slide it in from the left
 */
#menuToggle input:checked ~ ul
{
  transform: none;
}

@media (orientation: portrait) {
  #menuToggle {
    display: block;
  }
}

/* No more hamburger*/

.gridContainer {
  display: grid;
  grid-template: 100vh / calc(100vw*2/5) 1fr;
}

.left { /* Left side of screen (Title) */
  width: 100%;
  height: 100%;
  background-color: rgb(250, 249, 246, 0.6);
  display: grid;
  justify-content: center;
  align-content: center;
  text-align: center;
}

#name {
  width: 80%;
  margin: auto;
}

.right { /* Right side of screen (Header, bodytitle, body, button)*/
  width: 100%;
  height: 100%;
  background-color: rgb(0, 0, 0, 0.8); 
  color: white;
  display: grid;
  grid-template: 2fr 40% 1fr / 100%;
}

#title {
  height: 80%;
  width: 80%;
  margin: auto;
  display: flex;
  justify-content: flex-start;
  align-items: flex-end;
  text-align: center;
  font-size: 2em;
}

#body {
  height: 80%;
  width: 90%;
  line-height: 1.5em;
  font-size: 1.25em;
  margin: auto;
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
}

#button {
  height: 80%;
  width: 80%;
  margin: auto;
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
}

#button > a {
  height: 50px;
  width: 150px;
  background-color: #575F38;
  color: white;
  border-radius: 9999px;
  font-weight: bold ;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
}

#button > a:hover {
  background-color: #454c2c;
  cursor: pointer;
}

@media (orientation: portrait) {
  .gridContainer {
    grid-template: calc(100vh*2/5) calc(100vh*3/5) / 100vw;
  }
  #header {
    background-color: transparent;
    box-shadow: none;
  }
  #headerTitle > h2 {
    display: none;
  }
  #headerLinks > a{
    display: none;
  }
  .right {
    grid-template: 1fr 40% 1fr / 100%;
  }
  #button {
    align-items: center;
  }
}

/* Stöd Oss */

/* Om Föreningen */

/* Styrelse */

.contactCardFlex {
  width: auto;
  min-height: 100vh;
  height: auto;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  flex-direction: row;
  padding-top: 200px;
}

.contactCardFlex > div {
  width: 500px;
  height: 500px;
  margin: 25px;
  border-radius: 25px;
  box-shadow: 10px 10px 25px gray;
  display: flex;
  flex-direction: column;
}

.cardImage {
  width: 100%;
  height: 65%;
}


.cardImage > img {
  width: 100%;
  height: 100%;
}

.cardText {
  width: 100%;
  height: 35%;
  border-radius: 0px 0px 25px 25px;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

.cardText > h3 {
  margin-top: 0;
  line-height: 0;
  font-weight: normal;
}

@media (orientation: portrait) {
  .contactCardFlex {
    padding: 0px;
  }
  .contactCardFlex > div {
    width: 75vw;
    height: 75vh;
  }
}

/* Stadgar */

.stadgarFlex {
  width: auto;
  height: auto;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: left;
}

.stadgarFlex > h1 {
  padding-top: 200px;
  width: 80vw;
}

.stadgarFlex > p {
  margin: auto;
  width: 80vw;
  text-align: left;
  line-height: 1.5em;
  margin-block-start: 1.5em;
  padding-bottom: 100px;
}

